--- a/Ekram_LS_DS_232_assignment.ipynb
+++ b/Ekram_LS_DS_232_assignment.ipynb
@@ -430,7 +430,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 383
         },
-        "outputId": "c75f0560-94ee-4d85-8592-84f969f485ed"
+        "outputId": "98939a01-75b0-49d1-989a-69d065430662"
       },
       "source": [
         "\n",
@@ -588,7 +588,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 299
         },
-        "outputId": "31890c7c-3cea-4216-9d39-579f252614f5"
+        "outputId": "07d2b76a-520b-4336-910c-245ba81b13d4"
       },
       "source": [
         "df = df.rename(columns={\"Team 1\": \"Team_1\", \"Team 2\": \"Team_2\",\n",
@@ -746,7 +746,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 282
         },
-        "outputId": "dfa7aba3-5443-4715-b334-bd7b416a1630"
+        "outputId": "b2266bb4-91e1-4ad1-8ef0-e6ba94dada2a"
       },
       "source": [
         "df = df[(((df['Team_1'] == 'India') | (df['Team_2'] == 'India'))) & (((df['Team_1'] == 'Pakistan') | (df['Team_2'] == 'Pakistan'))) ]\n",
@@ -904,7 +904,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 316
         },
-        "outputId": "b6edf914-b4cb-4cf4-892e-710797b1433c"
+        "outputId": "8338d54d-5637-46c0-dd75-84c7dc732dcb"
       },
       "source": [
         "df.tail()"
@@ -1080,7 +1080,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 67
         },
-        "outputId": "5785b8e6-9ed3-4896-be85-07ae6d6dcaef"
+        "outputId": "ebf6c29d-ecd9-4d92-8b37-1eacbbccef75"
       },
       "source": [
         "df['Winner'].value_counts(normalize = True)"
@@ -1112,7 +1112,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 296
         },
-        "outputId": "82e9317b-c59c-4578-add0-f8f7d388f566"
+        "outputId": "78a90442-694f-4c6f-ca6a-88970965f5c1"
       },
       "source": [
         "import seaborn as sns\n",
@@ -1124,7 +1124,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f05fa466080>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f0d8af1d0f0>"
             ]
           },
           "metadata": {
@@ -1149,6 +1149,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "qcC-BwfsjOLZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Just by guessing I would get accuracy score of 58.53%"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "OTNNItDqUeVq",
         "colab_type": "text"
       },
@@ -1165,7 +1175,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 252
         },
-        "outputId": "aa230ef7-ceb8-462b-9913-531469402b5d"
+        "outputId": "9bcc3d94-58df-48cb-8921-3ee658d532a6"
       },
       "source": [
         "df.isna().sum().sort_values()"
@@ -1232,7 +1242,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 282
         },
-        "outputId": "e7b876d5-1455-42b7-86b6-294181a7aca0"
+        "outputId": "2cfffbbe-9b40-4d6a-fe6c-c87e5a46328a"
       },
       "source": [
         "df.head()"
@@ -1479,7 +1489,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 299
         },
-        "outputId": "0e47968e-0b93-495f-a479-174551ce29d7"
+        "outputId": "a7dee228-29b6-4d12-dcbd-f0b014d6fb7a"
       },
       "source": [
         "train.head()"
@@ -1653,7 +1663,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 316
         },
-        "outputId": "944180ad-8e07-4819-d4fa-f95d91e63f7e"
+        "outputId": "6e7bf495-aae4-434c-b1db-c38542da03ba"
       },
       "source": [
         "val.head()"
@@ -1827,7 +1837,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 316
         },
-        "outputId": "026665b3-8d87-4440-aa34-71a25f291163"
+        "outputId": "82767c15-7ac5-456d-fbb6-4ce7bd4a2d34"
       },
       "source": [
         "test.head()"
@@ -2024,7 +2034,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 491
         },
-        "outputId": "725ae37a-f38c-443a-d0ce-e59a212f3249"
+        "outputId": "9ef73f9b-f963-4406-e09f-d888fa6081da"
       },
       "source": [
         "train.describe(exclude = 'number').T.sort_values(by = 'unique', ascending = False)"
@@ -2064,14 +2074,14 @@
               "      <th>Scorecard</th>\n",
               "      <td>156</td>\n",
               "      <td>109</td>\n",
-              "      <td>ODI # 1476</td>\n",
+              "      <td>ODI # 2192</td>\n",
               "      <td>2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Match_Date</th>\n",
               "      <td>156</td>\n",
               "      <td>109</td>\n",
-              "      <td>Apr 12, 2005</td>\n",
+              "      <td>Sep 28, 1997</td>\n",
               "      <td>2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -2171,8 +2181,8 @@
             ],
             "text/plain": [
               "                   count unique              top freq\n",
-              "Scorecard            156    109       ODI # 1476    2\n",
-              "Match_Date           156    109     Apr 12, 2005    2\n",
+              "Scorecard            156    109       ODI # 2192    2\n",
+              "Match_Date           156    109     Sep 28, 1997    2\n",
               "Ground               156     41          Sharjah   29\n",
               "Host_Country         156     11            India   38\n",
               "Venue_Team1          156      3          Neutral   94\n",
@@ -2205,7 +2215,8 @@
       "source": [
         "# Removing columns with high cordinality\n",
         "high_cardinality = 'Scorecard', 'Match_Date'\n",
-        "features = train.columns.drop(['Unnamed: 0', 'Winner', 'Scorecard', 'Match_Date'])"
+        "# Margin will cause data leakage\n",
+        "features = train.columns.drop(['Unnamed: 0', 'Winner', 'Scorecard', 'Match_Date', 'Margin'])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -2219,7 +2230,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "be0d310a-6d77-4b74-b2aa-0f88b02c4783"
+        "outputId": "d705f6e1-4644-42b1-ae77-fae6e8d180ee"
       },
       "source": [
         "target"
@@ -2249,7 +2260,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 84
         },
-        "outputId": "057f9898-00c4-4f90-ea69-f7520f5c3dda"
+        "outputId": "8655339f-bcea-4d21-91b9-8751cd975a65"
       },
       "source": [
         "features"
@@ -2260,7 +2271,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Index(['Team_1', 'Team_2', 'Margin', 'Ground', 'Host_Country', 'Venue_Team1',\n",
+              "Index(['Team_1', 'Team_2', 'Ground', 'Host_Country', 'Venue_Team1',\n",
               "       'Venue_Team2', 'Innings_Team1', 'Innings_Team2', 'played_at_home',\n",
               "       'played_at_Pakistan', 'Played_in_neutral'],\n",
               "      dtype='object')"
@@ -2325,7 +2336,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 386
         },
-        "outputId": "170d1db7-df4d-41f1-f47c-2e557d54dd37"
+        "outputId": "170c9c4a-e264-480a-d457-b2bc50e39ea8"
       },
       "source": [
         "pipeline = make_pipeline(\n",
@@ -2343,7 +2354,7 @@
             "text/plain": [
               "Pipeline(memory=None,\n",
               "         steps=[('onehotencoder',\n",
-              "                 OneHotEncoder(cols=['Team_1', 'Team_2', 'Margin', 'Ground',\n",
+              "                 OneHotEncoder(cols=['Team_1', 'Team_2', 'Ground',\n",
               "                                     'Host_Country', 'Venue_Team1',\n",
               "                                     'Venue_Team2', 'Innings_Team1',\n",
               "                                     'Innings_Team2'],\n",
@@ -2417,7 +2428,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "6a5ef7d6-b0b7-45fe-897e-3437d0fac439"
+        "outputId": "f85528fa-16c7-4a26-dc8c-09f3077ec7ce"
       },
       "source": [
         "accuracy_score(y_val, y_pred_val)"
@@ -2428,7 +2439,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.975"
+              "0.625"
             ]
           },
           "metadata": {
@@ -2470,7 +2481,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "875bf280-657f-41ef-83bd-8bfc1a12c66c"
+        "outputId": "42c240df-0b9a-45b1-8213-e9da46203188"
       },
       "source": [
         "accuracy_score(y_test, y_pred_test)"
@@ -2481,7 +2492,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.88"
+              "0.5"
             ]
           },
           "metadata": {
