--- a/Ekram_LS_DS_232_assignment.ipynb
+++ b/Ekram_LS_DS_232_assignment.ipynb
@@ -426,18 +426,18 @@
       "metadata": {
         "id": "me7vhBoUTSM1",
         "colab_type": "code",
+        "outputId": "98939a01-75b0-49d1-989a-69d065430662",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 383
-        },
-        "outputId": "98939a01-75b0-49d1-989a-69d065430662"
+          "height": 195
+        }
       },
       "source": [
         "\n",
         "df = pd.read_csv('https://raw.githubusercontent.com/Ekram49/DS-Unit-1-Build/master/ContinousDataset.csv')\n",
         "df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,18 +584,18 @@
       "metadata": {
         "id": "DKeJILCwTUpL",
         "colab_type": "code",
+        "outputId": "07d2b76a-520b-4336-910c-245ba81b13d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 299
-        },
-        "outputId": "07d2b76a-520b-4336-910c-245ba81b13d4"
+          "height": 195
+        }
       },
       "source": [
         "df = df.rename(columns={\"Team 1\": \"Team_1\", \"Team 2\": \"Team_2\",\n",
         "                   \"Team 1\": \"Team_1\",\"Match Date\":\"Match_Date\"})\n",
         "df.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -742,18 +742,18 @@
       "metadata": {
         "id": "t1f4tJ9PTXcU",
         "colab_type": "code",
+        "outputId": "b2266bb4-91e1-4ad1-8ef0-e6ba94dada2a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 282
-        },
-        "outputId": "b2266bb4-91e1-4ad1-8ef0-e6ba94dada2a"
+          "height": 195
+        }
       },
       "source": [
         "df = df[(((df['Team_1'] == 'India') | (df['Team_2'] == 'India'))) & (((df['Team_1'] == 'Pakistan') | (df['Team_2'] == 'Pakistan'))) ]\n",
         "\n",
         "df.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -900,16 +900,16 @@
       "metadata": {
         "id": "Kb4bbamWTZ5U",
         "colab_type": "code",
+        "outputId": "8338d54d-5637-46c0-dd75-84c7dc732dcb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 316
-        },
-        "outputId": "8338d54d-5637-46c0-dd75-84c7dc732dcb"
+          "height": 195
+        }
       },
       "source": [
         "df.tail()"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1076,16 +1076,16 @@
       "metadata": {
         "id": "iIacWq-eTcB7",
         "colab_type": "code",
+        "outputId": "ebf6c29d-ecd9-4d92-8b37-1eacbbccef75",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "ebf6c29d-ecd9-4d92-8b37-1eacbbccef75"
+        }
       },
       "source": [
         "df['Winner'].value_counts(normalize = True)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1108,17 +1108,17 @@
       "metadata": {
         "id": "pMKwz93VTnEg",
         "colab_type": "code",
+        "outputId": "78a90442-694f-4c6f-ca6a-88970965f5c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 296
-        },
-        "outputId": "78a90442-694f-4c6f-ca6a-88970965f5c1"
+        }
       },
       "source": [
         "import seaborn as sns\n",
         "sns.countplot(df['Winner'])"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1171,16 +1171,16 @@
       "metadata": {
         "id": "ZyXqqdFgUA-b",
         "colab_type": "code",
+        "outputId": "9bcc3d94-58df-48cb-8921-3ee658d532a6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 252
-        },
-        "outputId": "9bcc3d94-58df-48cb-8921-3ee658d532a6"
+        }
       },
       "source": [
         "df.isna().sum().sort_values()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1238,16 +1238,16 @@
       "metadata": {
         "id": "8VLeiXfmZkZ3",
         "colab_type": "code",
+        "outputId": "2cfffbbe-9b40-4d6a-fe6c-c87e5a46328a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 282
-        },
-        "outputId": "2cfffbbe-9b40-4d6a-fe6c-c87e5a46328a"
+          "height": 195
+        }
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1485,16 +1485,16 @@
       "metadata": {
         "id": "QUQp9ex5T68g",
         "colab_type": "code",
+        "outputId": "a7dee228-29b6-4d12-dcbd-f0b014d6fb7a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 299
-        },
-        "outputId": "a7dee228-29b6-4d12-dcbd-f0b014d6fb7a"
+        }
       },
       "source": [
         "train.head()"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1659,16 +1659,16 @@
       "metadata": {
         "id": "boxwqgfGT9XH",
         "colab_type": "code",
+        "outputId": "6e7bf495-aae4-434c-b1db-c38542da03ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 316
-        },
-        "outputId": "6e7bf495-aae4-434c-b1db-c38542da03ba"
+        }
       },
       "source": [
         "val.head()"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1833,16 +1833,16 @@
       "metadata": {
         "id": "stFSvDRST_i8",
         "colab_type": "code",
+        "outputId": "82767c15-7ac5-456d-fbb6-4ce7bd4a2d34",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 316
-        },
-        "outputId": "82767c15-7ac5-456d-fbb6-4ce7bd4a2d34"
+        }
       },
       "source": [
         "test.head()"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2030,16 +2030,16 @@
       "metadata": {
         "id": "ghvu0DSudZwN",
         "colab_type": "code",
+        "outputId": "9ef73f9b-f963-4406-e09f-d888fa6081da",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 491
-        },
-        "outputId": "9ef73f9b-f963-4406-e09f-d888fa6081da"
+        }
       },
       "source": [
         "train.describe(exclude = 'number').T.sort_values(by = 'unique', ascending = False)"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2226,16 +2226,16 @@
       "metadata": {
         "id": "ZluD9QuweODT",
         "colab_type": "code",
+        "outputId": "d705f6e1-4644-42b1-ae77-fae6e8d180ee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d705f6e1-4644-42b1-ae77-fae6e8d180ee"
+        }
       },
       "source": [
         "target"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2256,16 +2256,16 @@
       "metadata": {
         "id": "361SXV0ae2Cx",
         "colab_type": "code",
+        "outputId": "8655339f-bcea-4d21-91b9-8751cd975a65",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 84
-        },
-        "outputId": "8655339f-bcea-4d21-91b9-8751cd975a65"
+        }
       },
       "source": [
         "features"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2332,11 +2332,11 @@
       "metadata": {
         "id": "FWRNsJuFfjgd",
         "colab_type": "code",
+        "outputId": "170c9c4a-e264-480a-d457-b2bc50e39ea8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
-        },
-        "outputId": "170c9c4a-e264-480a-d457-b2bc50e39ea8"
+        }
       },
       "source": [
         "pipeline = make_pipeline(\n",
@@ -2346,7 +2346,7 @@
         ")\n",
         "pipeline.fit(X_train, y_train)"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2424,16 +2424,16 @@
       "metadata": {
         "id": "2Pw6zaRFfvj7",
         "colab_type": "code",
+        "outputId": "f85528fa-16c7-4a26-dc8c-09f3077ec7ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f85528fa-16c7-4a26-dc8c-09f3077ec7ce"
+        }
       },
       "source": [
         "accuracy_score(y_val, y_pred_val)"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2477,16 +2477,16 @@
       "metadata": {
         "id": "55WGVsirf9YE",
         "colab_type": "code",
+        "outputId": "42c240df-0b9a-45b1-8213-e9da46203188",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "42c240df-0b9a-45b1-8213-e9da46203188"
+        }
       },
       "source": [
         "accuracy_score(y_test, y_pred_test)"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2511,6 +2511,19 @@
       },
       "source": [
         "# Prediction is too good, need re-check"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RIsoxC-Ol6k-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# This time prediction is worse than baseline prediction."
       ],
       "execution_count": 0,
       "outputs": []
