finished main & stretch

--- a/module1-regression-1/Ben_Pettis_LS_DS14_211_assignment.ipynb
+++ b/module1-regression-1/Ben_Pettis_LS_DS14_211_assignment.ipynb
@@ -823,9 +823,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 67
+          "height": 84
         },
-        "outputId": "15215664-e935-4fcc-b3a8-a69430bbd95a"
+        "outputId": "4ae9aee3-756a-4eb5-f612-6b9453fcade2"
       },
       "source": [
         "# define function to make new predictions & show coeffecient\n",
@@ -839,11 +839,12 @@
         "  return estimate\n",
         "print(predict(5))"
       ],
-      "execution_count": 19,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "[6534.24498682]\n",
             "The estimated price for an apartment with 5 bedrooms is 6534\n",
             "The coeffecient used to predict the price according to number of bedrooms is [[853.25416753]]\n",
             "[6534.24498682]\n"
@@ -886,6 +887,41 @@
             "tags": []
           },
           "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zyERXrc8HBYa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "b3f5d251-248a-4a81-a016-ddbc5ce39d2e"
+      },
+      "source": [
+        "# create function to predict price according to longitude & # of bedrooms\n",
+        "def predict(bedrooms, longitude):\n",
+        "  y_pred = model.predict([[bedrooms], [longitude]])\n",
+        "  estimate = y_pred[0]\n",
+        "  coeffecient = model.coef_[0]\n",
+        "  print ('The estimated price for an apartment with', int(bedrooms), 'bedrooms at', longitude, 'longitude is', int(estimate))\n",
+        "  print ('The coeffecient used to predict the price according to number of bedrooms is', model.coef_)\n",
+        "  return estimate\n",
+        "print(predict(3, -73.98))"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The estimated price for an apartment with 3 bedrooms at -73.98 longitude is 4827\n",
+            "The coeffecient used to predict the price according to number of bedrooms is [[853.25416753]]\n",
+            "[4827.73665176]\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
