--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -162,7 +162,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -444,7 +444,7 @@
       "source": [
         "df.corr()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1490,7 +1490,7 @@
         "\n",
         "px.scatter(df, x='bathrooms', y='price')"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1577,7 +1577,7 @@
         "\n",
         "model.fit(x_train, y_train) #feed training data into linear regression model"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1624,7 +1624,7 @@
       "source": [
         "predict_apartment_price(3)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1668,7 +1668,7 @@
         "\n",
         "model.fit(train[features], train[target]) #feed training data into linear regression model"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1701,7 +1701,7 @@
         "print(\"Training accuracy: \", mean_absolute_error(train[target], model.predict(train[features])))\n",
         "print(\"Testing accuracy: \", mean_absolute_error(test[target], model.predict(test[features])))"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1736,16 +1736,16 @@
       "metadata": {
         "id": "hf3Y9lzZC0Xi",
         "colab_type": "code",
+        "outputId": "9559e57c-19c5-4fda-af14-b7b31710b165",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "9559e57c-19c5-4fda-af14-b7b31710b165"
+        }
       },
       "source": [
         "predict_apartment_price(bathrooms=4, bedrooms=3, fitness_center=1, dining_room=1, dishwasher=1, laundry_in_unit=1, balcony=1, cats_allowed=1, elevator=1, doorman=1)"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1805,18 +1805,18 @@
       "metadata": {
         "id": "umUWQlF66JMy",
         "colab_type": "code",
+        "outputId": "c0c159ab-d04f-4db8-a5fa-ae7e9bc99c7e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "c0c159ab-d04f-4db8-a5fa-ae7e9bc99c7e"
+        }
       },
       "source": [
         "num_clusters = len(set(cluster_labels))\n",
         "\n",
         "print(num_clusters)"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1845,11 +1845,11 @@
       "metadata": {
         "id": "-faXzZER_ApN",
         "colab_type": "code",
+        "outputId": "b3e60579-195d-4bf8-8831-fe7c2859ecc0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "b3e60579-195d-4bf8-8831-fe7c2859ecc0"
+        }
       },
       "source": [
         "train, test = train_test_split(df, random_state=0) #seed value kept the same as above, so we know we're working with the same test/train data.\n",
@@ -1861,7 +1861,7 @@
         "\n",
         "model.fit(train[features], train[target]) #feed training data into linear regression model"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1882,17 +1882,17 @@
       "metadata": {
         "id": "775zfVme_Fkf",
         "colab_type": "code",
+        "outputId": "8b48a508-fbc5-4d43-f418-aefba430a2d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "8b48a508-fbc5-4d43-f418-aefba430a2d1"
+        }
       },
       "source": [
         "print(\"Training accuracy: \", mean_absolute_error(train[target], model.predict(train[features])))\n",
         "print(\"Testing accuracy: \", mean_absolute_error(test[target], model.predict(test[features])))"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1911,7 +1911,7 @@
         "colab_type": "text"
       },
       "source": [
-        "By adding even an imperfect dbscan clustering model, we improved our linear regression in-sample score by 20. With a more fine tuned model, clustering within individual burroughs for example, we could improve much more."
+        "By adding even an imperfect dbscan clustering model, we improved our linear regression out of sample score by 20. With a more fine tuned model, clustering within individual burroughs for example, we could improve much more."
       ]
     },
     {
@@ -1932,11 +1932,11 @@
       "metadata": {
         "id": "KChRD-jFp6-r",
         "colab_type": "code",
+        "outputId": "f92cc3c5-cd22-468e-a403-ce4c59a90e9f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "f92cc3c5-cd22-468e-a403-ce4c59a90e9f"
+        }
       },
       "source": [
         "from sklearn.ensemble import RandomForestRegressor\n",
@@ -1947,7 +1947,7 @@
         "print(\"Training accuracy: \", mean_absolute_error(train['price'], model.predict(train[features])))\n",
         "print(\"Testing accuracy: \", mean_absolute_error(test['price'], model.predict(test[features])))"
       ],
-      "execution_count": 60,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
