--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -159,7 +159,7 @@
       "metadata": {
         "id": "YvKeI7gHzy3q",
         "colab_type": "code",
-        "outputId": "9e144ce1-37c3-4ff6-a53b-f770d55f9ab9",
+        "outputId": "12416c23-a9ba-44f5-b1f3-ee25e1c67dcc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 504
@@ -168,7 +168,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -432,7 +432,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 63
         }
       ]
     },
@@ -490,7 +490,7 @@
       "metadata": {
         "id": "fP4gx1QOK9b0",
         "colab_type": "code",
-        "outputId": "771b2488-f597-481f-f6fe-172f5e85ba30",
+        "outputId": "9bbb67e7-c6c5-4aa0-e83a-2da3341294bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 90
@@ -499,7 +499,7 @@
       "source": [
         "df['interest_level'].value_counts()"
       ],
-      "execution_count": 7,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -514,7 +514,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 67
         }
       ]
     },
@@ -527,7 +527,7 @@
       },
       "source": [
         "df['interest_level'] = df['interest_level'].astype('category')\n",
-        "df['interest_level'] = df['interest_level'].cat.codes #hot encode"
+        "df['interest_level'] = df['interest_level'].cat.codes #label encode"
       ],
       "execution_count": 0,
       "outputs": []
@@ -668,7 +668,7 @@
       "metadata": {
         "id": "-sP0mAK2QfRJ",
         "colab_type": "code",
-        "outputId": "177b1e76-e0ca-4800-9514-ed69508c34cb",
+        "outputId": "14a59ee5-06fb-48b4-82eb-5de1925a40df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -679,15 +679,15 @@
         "\n",
         "model = LinearRegression() #instaniate object\n",
         "\n",
-        "#features = ['bathrooms', 'bedrooms', 'fitness_center', 'dining_room', 'dishwasher', 'laundry_in_unit', 'balcony', 'elevator', 'cats_allowed', 'labels', 'doorman', 'interest_level', 'no_fee', 'longitude', 'hardwood_floors'] #define features, with added labels column\n",
+        "features = ['bathrooms', 'bedrooms', 'fitness_center', 'dining_room', 'dishwasher', 'laundry_in_unit', 'balcony', 'elevator', 'cats_allowed', 'labels', 'doorman', 'interest_level', 'no_fee', 'longitude', 'hardwood_floors'] #define features, with added labels column\n",
         "#features = ['bathrooms', 'bedrooms', 'fitness_center', 'dining_room', 'dishwasher', 'laundry_in_unit', 'outdoor_feature', 'elevator', 'cats_allowed', 'labels', 'doorman', 'interest_level', 'no_fee', 'longitude', 'hardwood_floors']\n",
         "#features = ['bathrooms', 'bedrooms', 'labels', 'interest_level'] #define features, with added labels column\n",
-        "features = ['bathrooms','bedrooms', 'labels', 'dishwasher', 'laundry_in_unit', 'longitude', 'interest_level', 'elevator', 'doorman']\n",
+        "#features = ['bathrooms','bedrooms', 'dishwasher', 'labels', 'laundry_in_unit', 'longitude', 'interest_level', 'elevator', 'doorman']\n",
         "target = 'price' #define our target variable\n",
         "\n",
         "model.fit(train[features], train[target]) #feed training data into linear regression model"
       ],
-      "execution_count": 33,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -699,7 +699,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 78
         }
       ]
     },
@@ -708,10 +708,10 @@
       "metadata": {
         "id": "I0DhRmNlSLXo",
         "colab_type": "code",
-        "outputId": "f25dffee-b4a4-460f-be40-65dc8e9b6583",
+        "outputId": "8eeaf5a6-0212-46c9-b309-b52b38733ab3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 495
+          "height": 605
         }
       },
       "source": [
@@ -747,37 +747,43 @@
         "print(coefficients.to_string())\n",
         "\n"
       ],
-      "execution_count": 34,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "MAE training accuracy:  697.7209321227963\n",
-            "RSME training accuracy:  26.414407661781784\n",
-            "R^2 training accuracy:  0.608464766288931\n",
+            "MAE training accuracy:  694.8709210032617\n",
+            "RSME training accuracy:  26.360404416534692\n",
+            "R^2 training accuracy:  0.6147061295340195\n",
             "\n",
             "\n",
-            "MAE testing accuracy:  708.8970294078932\n",
-            "RSME testing accuracy:  26.625120270299124\n",
-            "R^2 testing accuracy:  0.6149114366583925\n",
+            "MAE testing accuracy:  702.7363431534562\n",
+            "RSME testing accuracy:  26.50917469770525\n",
+            "R^2 testing accuracy:  0.6231329717296221\n",
             "\n",
             "\n",
             "MAE baseline testing accuracy:  1200.8695333832386\n",
             "\n",
             "\n",
-            "Intercept: -853252.4045255072 \n",
+            "Intercept: -853788.0484505544 \n",
             "\n",
             "Model coefficients: \n",
             "\n",
-            "bathrooms           1813.705910\n",
-            "bedrooms             464.591584\n",
-            "labels                -2.179825\n",
-            "dishwasher           -89.362625\n",
-            "laundry_in_unit      436.545986\n",
-            "longitude         -11542.877847\n",
-            "interest_level      -141.055343\n",
-            "elevator              90.865132\n",
-            "doorman              454.569900\n"
+            "bathrooms           1782.350495\n",
+            "bedrooms             471.507847\n",
+            "fitness_center        14.011277\n",
+            "dining_room          233.852312\n",
+            "dishwasher            59.114713\n",
+            "laundry_in_unit      478.673111\n",
+            "balcony              -50.418750\n",
+            "elevator             113.343502\n",
+            "cats_allowed          29.235322\n",
+            "labels                -2.265091\n",
+            "doorman              453.754854\n",
+            "interest_level      -125.838534\n",
+            "no_fee              -188.183363\n",
+            "longitude         -11551.100582\n",
+            "hardwood_floors     -232.539494\n"
           ],
           "name": "stdout"
         }
@@ -788,7 +794,7 @@
       "metadata": {
         "id": "-NgK0NApBRQ1",
         "colab_type": "code",
-        "outputId": "4fee25e3-a2e9-46f5-f005-bf6a2577d26e",
+        "outputId": "cc22a48f-cf9a-4e5b-bbcb-d2e291c87c6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -797,7 +803,7 @@
       "source": [
         "df.corr()"
       ],
-      "execution_count": 36,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2091,7 +2097,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 80
         }
       ]
     },
@@ -2099,6 +2105,38 @@
       "cell_type": "code",
       "metadata": {
         "id": "c0LBbiugIdXx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "d57a68dd-9de0-49e7-a706-18ff6393bf00"
+      },
+      "source": [
+        "from sklearn.ensemble import RandomForestRegressor\n",
+        "\n",
+        "model = RandomForestRegressor()\n",
+        "model.fit(train[features], train['price'])\n",
+        "\n",
+        "print(\"Training accuracy: \", mean_absolute_error(train['price'], model.predict(train[features])))\n",
+        "print(\"Testing accuracy: \", mean_absolute_error(test['price'], model.predict(test[features])))"
+      ],
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Training accuracy:  162.17457747096202\n",
+            "Testing accuracy:  416.70617152392526\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DLzt0ZycwTJM",
         "colab_type": "code",
         "colab": {}
       },
